FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Fixed_Payout_Fee__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Payout_Fee__c</fullName>
    <description>global payments field</description>
    <label>Fixed Payout Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>