FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Fixed_Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Processing_Fee__c</fullName>
    <description>global payments</description>
    <label>Fixed Processing Fee</label>
    <length>250</length>
    <type>Text</type>
</CustomField>