FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Flow_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Flow_Trigger__c</fullName>
    <description>Used by Admin to update record to trigger flow automations.</description>
    <inlineHelpText>Used by Admin to update record to trigger flow automations.</inlineHelpText>
    <label>Flow Trigger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>