FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Funds_Flow_Document__c.field-meta.xml
<CustomField>
    <fullName>Funds_Flow_Document__c</fullName>
    <description>Global Payments moved from acct to prod config.</description>
    <label>Funds Flow Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>