FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/FW_Authorized_to_Cancel_Installments__c.field-meta.xml
<CustomField>
    <fullName>FW_Authorized_to_Cancel_Installments__c</fullName>
    <description>For support to know if FW Authorized to Cancel Installments</description>
    <inlineHelpText>Select whether Flywire Support is Authorized to Cancel Installments or not.</inlineHelpText>
    <label>FW Authorized to Cancel Installments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>