FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/FW_Authorized_to_Cancel_Plan__c.field-meta.xml
<CustomField>
    <fullName>FW_Authorized_to_Cancel_Plan__c</fullName>
    <description>FW Authorized to cancel plan</description>
    <inlineHelpText>Can FW cancel plans?</inlineHelpText>
    <label>FW Authorized to Cancel Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>