FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/FW_Authorized_to_reactivate_plans__c.field-meta.xml
<CustomField>
    <fullName>FW_Authorized_to_reactivate_plans__c</fullName>
    <description>Can FW reactivate plans?</description>
    <inlineHelpText>Can FW reactivate plans?</inlineHelpText>
    <label>FW Authorized to reactivate plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>