FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/FW_Authorized_to_Void_Installments__c.field-meta.xml
<CustomField>
    <fullName>FW_Authorized_to_Void_Installments__c</fullName>
    <description>For Support team to know if FW Authorized to Void Installments</description>
    <inlineHelpText>Select whether Flywire support is Authorized to Void Installments or not.</inlineHelpText>
    <label>FW Authorized to Void Installments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>