FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/FW_Providing_Payor_Support__c.field-meta.xml
<CustomField>
    <fullName>FW_Providing_Payor_Support__c</fullName>
    <description>Flywire providing payor support.</description>
    <inlineHelpText>Is Flywire Payor Support Needed?</inlineHelpText>
    <label>FW Providing Payor Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>