FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/FX_Markup__c.field-meta.xml
<CustomField>
    <fullName>FX_Markup__c</fullName>
    <description>global payments field.</description>
    <label>FX Markup</label>
    <length>250</length>
    <type>Text</type>
</CustomField>