FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/FX_Rate_Source__c.field-meta.xml
<CustomField>
    <fullName>FX_Rate_Source__c</fullName>
    <label>FX Rate Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>