FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Has_Domestic__c.field-meta.xml
<CustomField>
    <fullName>Has_Domestic__c</fullName>
    <description>Temporary Field used to Identify if the portal has been configured for Domestic Payments. Using to help with data migration BOPI project.</description>
    <inlineHelpText>Temporary Field used to Identify if the portal has been configured for Domestic Payments. Using to help with data migration BOPI project.</inlineHelpText>
    <label>Has Domestic?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>