FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/HC_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>HC_Project_Manager__c</fullName>
    <businessOwnerUser>joel.haferbecker@flywire.com.partial</businessOwnerUser>
    <description>Capture PM for HC implementations. Users do not need Salesforce so a secondary field is created as we can&apos;t use the generic &quot;Project Manager&quot; field. - Req from Joel SAL-2621</description>
    <inlineHelpText>Select the PM completing this implementation.</inlineHelpText>
    <label>HC Project Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allison Kline</fullName>
            </value>
            <value>
                <fullName>Ashlee Szczerba</fullName>
            </value>
            <value>
                <fullName>Ashley Price</fullName>
            </value>
            <value>
                <fullName>Chinwe Okorafor</fullName>
            </value>
            <value>
                <fullName>Ebony McNeill</fullName>
            </value>
            <value>
                <fullName>Eileen Fuller</fullName>
            </value>
            <value>
                <fullName>Jared Scobee</fullName>
            </value>
            <value>
                <fullName>Joel Haferbecker</fullName>
            </value>
            <value>
                <fullName>Joy Lawless</fullName>
            </value>
            <value>
                <fullName>Katherine Ledoux</fullName>
            </value>
            <value>
                <fullName>Lauren Forbes</fullName>
            </value>
            <value>
                <fullName>Owen Davies</fullName>
            </value>
            <value>
                <fullName>Pang Thor</fullName>
            </value>
            <value>
                <fullName>Rochelle Perez</fullName>
            </value>
            <value>
                <fullName>Scott Wu</fullName>
            </value>
            <value>
                <fullName>Sunrita Dasgupta</fullName>
            </value>
            <value>
                <fullName>Telisha Albritton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>