FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Imp_Check_Done__c.field-meta.xml
<CustomField>
    <fullName>Imp_Check_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the Implementation and Integration data has been completed and this record is now up to date. temporary field while moving integration data into prod config.</description>
    <inlineHelpText>Check if the Implementation and Integration data has been completed and this record is now up to date.</inlineHelpText>
    <label>Imp Check Done</label>
    <type>Checkbox</type>
</CustomField>