FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Integration_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Integration_Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if integration is deactivated</description>
    <inlineHelpText>Check if integration is deactivated</inlineHelpText>
    <label>Integration Deactivated</label>
    <type>Checkbox</type>
</CustomField>