FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Integration_Partner__c.field-meta.xml
<CustomField>
    <fullName>Integration_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Account record for the Integration Partner we are integrating this portal with.</description>
    <inlineHelpText>Search the Account record for the Integration Partner we are integrating this portal with.</inlineHelpText>
    <label>Integration Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prod Config (Int. Partner)</relationshipLabel>
    <relationshipName>Integrated_Prod_Config</relationshipName>
    <type>Lookup</type>
</CustomField>