FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Integration_Project_Plan__c.field-meta.xml
<CustomField>
    <fullName>Integration_Project_Plan__c</fullName>
    <inlineHelpText>Enter the link to the Integration Project Plan</inlineHelpText>
    <label>Integration Project Plan</label>
    <type>Url</type>
</CustomField>