FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Integration_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status_Date__c</fullName>
    <description>Date the Integration either went live or was Deactivated</description>
    <inlineHelpText>Enter the Date the Integration went live. Or, the Date all integrations were Deactivated.</inlineHelpText>
    <label>Integration Status Date</label>
    <type>Date</type>
</CustomField>