FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Integration_website__c.field-meta.xml
<CustomField>
    <fullName>Integration_website__c</fullName>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Redirect website for integrated portals</inlineHelpText>
    <label>Integration website</label>
    <type>Url</type>
</CustomField>