FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Internal_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Company_Name__c</fullName>
    <description>Internal Company Name used to identify Healthcare client in the platform. Requested by Joel, SAL-2898. Will see if this gives us sufficient id to map transactions to the prod config.</description>
    <externalId>true</externalId>
    <inlineHelpText>Internal Company Name used to identify Healthcare client in the platform.</inlineHelpText>
    <label>Internal Company Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>