FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Invoice_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Schedule__c</fullName>
    <label>Invoice Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>2X A Month</fullName>
            </value>
            <value>
                <fullName>Bi-annually</fullName>
                <isActive>false</isActive>
                <label>Bi-annually</label>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
                <isActive>false</isActive>
                <label>Bi-weekly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>