FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Itemization__c.field-meta.xml
<CustomField>
    <fullName>Itemization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the client is using the itemization feature</description>
    <inlineHelpText>Check if the client is using the itemization feature</inlineHelpText>
    <label>Itemization</label>
    <type>Checkbox</type>
</CustomField>