FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Itemization_enabled__c.field-meta.xml
<CustomField>
    <fullName>Itemization_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Is this portal itemized?</inlineHelpText>
    <label>Itemization Enabled</label>
    <type>Checkbox</type>
</CustomField>