FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Limits__c.field-meta.xml
<CustomField>
    <fullName>Limits__c</fullName>
    <label>Limits</label>
    <type>TextArea</type>
</CustomField>