FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+Id, Name__c,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Configuration</label>
    <type>Text</type>
</CustomField>