FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Link_to_PM_Customer_Folder__c.field-meta.xml
<CustomField>
    <fullName>Link_to_PM_Customer_Folder__c</fullName>
    <description>Link to PM Customer Folder</description>
    <inlineHelpText>Link to PM Customer Folder</inlineHelpText>
    <label>Link to PM Customer Folder</label>
    <type>Url</type>
</CustomField>