FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Max_CC_amount__c.field-meta.xml
<CustomField>
    <fullName>Max_CC_amount__c</fullName>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Maximum credit card payment amount</inlineHelpText>
    <label>Max CC amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>