FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Max_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Payment_Amount__c</fullName>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Max Payment Amount</inlineHelpText>
    <label>Max Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>