FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Method_of_Fees__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Fees__c</fullName>
    <label>Method of Fees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deducted From Settlement</fullName>
            </value>
            <value>
                <fullName>Flywire Invoicing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner Invoicing</fullName>
            </value>
            <value>
                <fullName>Net Settlement</fullName>
                <isActive>false</isActive>
                <label>Net Settlement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>