FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Method_of_Profit__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Profit__c</fullName>
    <label>Method of Profit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included In Settlement</fullName>
            </value>
            <value>
                <fullName>Flywire Invoicing</fullName>
            </value>
            <value>
                <fullName>Partner Invoicing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>