FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Min_Volume_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Min_Volume_Commitment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Min. Volume Commitment</label>
    <type>Checkbox</type>
</CustomField>