FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Min_Volume_Commitment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Volume_Commitment_Amount__c</fullName>
    <label>Min. Volume Commitment Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>