FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Minimum_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Payment_Amount__c</fullName>
    <description>If we accept payments less then $50, enter the amount here. This is configured in &quot;Admin&quot; ensure what is entered here matches. Filled in by Integration with Looker as of 12/11/2023</description>
    <inlineHelpText>If we accept payments less then $50, enter the amount here. This is configured in &quot;Admin&quot; ensure what is entered here matches.</inlineHelpText>
    <label>Minimum Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>