FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Misc_Fee__c.field-meta.xml
<CustomField>
    <fullName>Misc_Fee__c</fullName>
    <description>Global Payments Field</description>
    <label>Misc Fee</label>
    <length>250</length>
    <type>Text</type>
</CustomField>