FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Missed_Installments_to_Termination__c.field-meta.xml
<CustomField>
    <fullName>Missed_Installments_to_Termination__c</fullName>
    <description>Plan terminated after x missed installments</description>
    <inlineHelpText>Plan terminated after x missed installments</inlineHelpText>
    <label>Missed Installments to Termination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>