FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Missed_PYMT_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Missed_PYMT_Behavior__c</fullName>
    <inlineHelpText>Select Action after a missed payment.</inlineHelpText>
    <label>Missed PYMT Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Redistribute</fullName>
            </value>
            <value>
                <fullName>Roll Over</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>