FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>product name or Portal Name</description>
    <inlineHelpText>For XB portal - Use the same name as in Admin.</inlineHelpText>
    <label>Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>