FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/NSF_fee__c.field-meta.xml
<CustomField>
    <fullName>NSF_fee__c</fullName>
    <inlineHelpText>Specify amount and currency.</inlineHelpText>
    <label>NSF fee</label>
    <length>10</length>
    <type>Text</type>
</CustomField>