FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Number_of_International_Payers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_International_Payers__c</fullName>
    <description>Enter the number of payers for the client that will pay through this portal.  For example if client has 5,000 intl payers but only 1,000 would run through this payment portal you would enter 1,000 here. This may happen if you create an admissions portal.</description>
    <label>Number of Payers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>