FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/OBS_Implementation_Record__c.field-meta.xml
<CustomField>
    <fullName>OBS_Implementation_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this is the implementation for this Opportunity. Used to identify HC Impl projects - Joel.
OBS field - SAL 4236</description>
    <inlineHelpText>Indicates this is the implementation for this Opportunity.</inlineHelpText>
    <label>OBS_Implementation Record</label>
    <type>Checkbox</type>
</CustomField>