FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/OBS_Kick_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>OBS_Kick_Off_Date__c</fullName>
    <description>Date the Project was kicked off with the client. - HC Request Joel
OBS field - SAL 4236</description>
    <inlineHelpText>Date the Project was kicked off with the client.</inlineHelpText>
    <label>OBS_Kick Off Date</label>
    <type>Date</type>
</CustomField>