FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/OBS_Opportunity_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>OBS_Opportunity_Signed_Date__c</fullName>
    <description>Opportunity expected signature date . For HC Implementation - Joel. SAL-2875
OBS field - SAL 4236</description>
    <inlineHelpText>Date when Opportunity is signed</inlineHelpText>
    <label>OBS_Opportunity Signed Date</label>
    <type>Date</type>
</CustomField>