FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/OBS_Target_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>OBS_Target_Go_Live_Date__c</fullName>
    <description>Client&apos;s expected go-live date upon signing or communicated during kick-off. For HC Implementation - Joel.
OBS field - SAL 4236</description>
    <inlineHelpText>Client&apos;s expected go-live date upon signing or communicated during kick-off.</inlineHelpText>
    <label>OBS_Go-Live Date</label>
    <type>Date</type>
</CustomField>