FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/OBS_UAT_Date__c.field-meta.xml
<CustomField>
    <fullName>OBS_UAT_Date__c</fullName>
    <description>Date UAT started. For HC Implementation req by Joel.
OBS field - SAL 4236</description>
    <inlineHelpText>Date UAT started.</inlineHelpText>
    <label>OBS_UAT Date</label>
    <type>Date</type>
</CustomField>