FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Old_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Account_ID__c</fullName>
    <externalId>true</externalId>
    <label>Old Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>