FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/On_Boarded_By__c.field-meta.xml
<CustomField>
    <fullName>On_Boarded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To list the person who on-boarded the client, which may not be the Record Owner</description>
    <inlineHelpText>To list the person who on-boarded the client, which may not be the Record Owner</inlineHelpText>
    <label>On-Boarded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prod_Config_OnBoard</relationshipName>
    <type>Lookup</type>
</CustomField>