FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Opportunity that sold this product.</description>
    <inlineHelpText>Enter the Opportunity that sold this product.Should be auto filled in if you created the Prod Config from the Opportunity.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Product Configuration</relationshipLabel>
    <relationshipName>Product_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>