FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Other_Trade_Timing__c.field-meta.xml
<CustomField>
    <fullName>Other_Trade_Timing__c</fullName>
    <description>If Trade Timing is Other, this field needs to be filled in. Validation Rule Trade Timing Other</description>
    <inlineHelpText>If Trade Timing is Other, this field needs to be filled in.</inlineHelpText>
    <label>Other Trade Timing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>