FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Partner_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Code__c</fullName>
    <description>The code passed within the Payment Data indicating the Integration Partner involved with the payment processing. To be filled in automatically via Integration.</description>
    <inlineHelpText>The code passed within the Payment Data indicating the Integration Partner involved with the payment processing. To be filled in automatically via Integration.</inlineHelpText>
    <label>Partner Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>