FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Payables_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payables_Payment_Method__c</fullName>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>If Payables are enabled, what is the payables payment method</inlineHelpText>
    <label>Payables Payment Method</label>
    <length>250</length>
    <type>Text</type>
</CustomField>