FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Payment_Group__c.field-meta.xml
<CustomField>
    <fullName>Payment_Group__c</fullName>
    <description>Replacing Portal Type Picklist field to align with naming in Admin as this applies to Portals not to other products. To be filled in automatically by integration.</description>
    <inlineHelpText>Payment Group or Portal Type</inlineHelpText>
    <label>Payment Group</label>
    <length>60</length>
    <type>Text</type>
</CustomField>