FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Payment_Methods_Supported__c.field-meta.xml
<CustomField>
    <fullName>Payment_Methods_Supported__c</fullName>
    <description>global payments field.</description>
    <label>Payment Methods Supported</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternative / E-Wallet</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Offline Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Online Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Online Bill Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>