FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Payment_Option_Internal_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Option_Internal_Name__c</fullName>
    <description>Payment Option Internal Name - requested by Kelly SAL-501</description>
    <label>Payment Option Internal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>