FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Payment_Reattempt_Day__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reattempt_Day__c</fullName>
    <description>Payment reattempts after x days</description>
    <inlineHelpText>Payment reattempts after x days</inlineHelpText>
    <label>Payment Reattempt Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>