FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Payment_Reattempt_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reattempt_Enabled__c</fullName>
    <label>Payment Reattempt Enabled?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>