FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/PCOwner_RunningUser__c.field-meta.xml
<CustomField>
    <fullName>PCOwner_RunningUser__c</fullName>
    <description>If the User looking at this is the person listed as the Prod Config Owner mark true (used for reports and list views)</description>
    <formula>OR(
 Account__r.Relationship_Manager__r.Id  = $User.Id &amp;&amp; Account__r.Relationship_Manager__r.Id != &quot;&quot;,
 Config_Owner__r.Id = $User.Id &amp;&amp; Config_Owner__r.Id != &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the User looking at this is the person listed as the Prod Config Owner mark true (used for reports and list views)</inlineHelpText>
    <label>PC Owner RunningUser</label>
    <type>Checkbox</type>
</CustomField>