FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Plan_Cancellation_Button_Active__c.field-meta.xml
<CustomField>
    <fullName>Plan_Cancellation_Button_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ability for plan owner to self serve to cancel their plan?</description>
    <inlineHelpText>Ability for plan owner to self serve to cancel their plan?</inlineHelpText>
    <label>Plan Cancellation Button Active</label>
    <type>Checkbox</type>
</CustomField>