FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Plan_Type_Budget_Actual__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type_Budget_Actual__c</fullName>
    <description>Select the Plan Type</description>
    <inlineHelpText>Select the Plan Type</inlineHelpText>
    <label>Plan Type (Budget/Actual)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Budget to Actual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>