FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Portal_has_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Portal_has_Secret_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Portals with a shared key is a strong indication that the portal is integrated.</inlineHelpText>
    <label>Portal has Secret Key</label>
    <type>Checkbox</type>
</CustomField>