FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Portal_hidden_from_Flywire__c.field-meta.xml
<CustomField>
    <fullName>Portal_hidden_from_Flywire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Is this portal hidden from Flywire dropdown?</inlineHelpText>
    <label>Portal Hidden from Flywire</label>
    <type>Checkbox</type>
</CustomField>